--- a/Libros/GUI/EjemplarEdicion.resx
+++ b/Libros/GUI/EjemplarEdicion.resx
@@ -648,4 +648,25 @@
         IOxJKUdoTjglCIMSwFAz7DDTIMS0HKJDie4webse6yfBf//Z
 </value>
   </data>
+  <data name="btnBuscarLibro.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANLSURBVEhLtZR7
+        SFNRHMctIiLq34L+abbcXIuo3dueria02t10lJTRzMfW2sYwqt27USlm4h+VQlRWUEH2oLAHlFAJmWEk
+        9I6waKWJlL0bqdWce/06Z50Vtamzxwe+7HLP73zu2eH8TtpooBg3X8Jw1XSu+yFtcPfSei443+B5jX7P
+        UXrOpNFUjiOlo0O8onI8zbh2IVFYvnRLyFh2LGracwmKDrZAfu15yLbVhiiGAzrH00Hp2CwyLTXEGuck
+        OodrQ5Mjpn1NUN7eB1u9ftjZMQA7UCrQM8765k5Y5NgVRosIibMdHjJ9RMagCY1S46bwusteqHrqh4tv
+        gtDzJQq9AwDd/dEfH8Apf/wZ1MW1MJ0ygVBtdxDH0EgY10qKYcF25h5UP/PDk94I+PwA19+HoP7FINR0
+        /vwHOFxrCBwnAiBQ22CGtCjI05RMIKrk0Lker27jgQiefMcXhndfo7C/K/CLNB4sdzZALHlVN2G6ZBVk
+        Kq17iCoRiWGDCK/efvY+7ENSvCWnXg6OKI9HkGWFDEVJD9ElImHYAvyBLQ8+QdPbELxBq69MUY5DL6uC
+        dGlhmOgSofQulzTXE8aStg9hePQpkrIcR1VYBzyJCYguEZrhSmkDF6148hV2Px+Aut/2fjg5jmxlDfDo
+        gijRJSLRsUvwFrlau38RpyLHmb3YBXxZkZ/oElEZPZNR+wdwx45Wbq3vx6sHgcLSSnTJQW1/SJ5XHtp8
+        35eyHEeWvzPWbCKlfQFRJWee1jNtvsHdj3uBbQkklf0eY1lLTI5Wf5tohmfv0ebjsxbaQZRdCuZDH5NK
+        49GWNkA62hq+vLiPomwTiSIRmmE9FOO6ce1WZ3V7xwdgtx3p4tGmaDq9OnY68rc/BOepSExqOewD7brT
+        IFrojHXvTEXJK77SMYWoEvkuZwFHnsPCycabd/F7sXLtXIHC7OVRBTERPuPxZxx09wSEqjU1qHQsrk8K
+        uvPL4nIRurDwRL60sI8Mx0iXWadmqtdsFqgsDUKl5UJmlrUuQ2XXkuGhSSbHESjNF0nJnyPRce7kcstV
+        UvLnoLO+aQh5Myn5Oyg92/Xf5Bi0PXNEC2xffsgV5itk6N8hVFuXz6BXB9GpaCKv/hFpad8APksSVd5z
+        XhoAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
