Se agregaron iconos y se corrigio el error de prestamos.

--- a/Biblo/GUI/Principal.resx
+++ b/Biblo/GUI/Principal.resx
@@ -245,6 +245,225 @@
         D4eOHGXnk1J0pRKhEzDSJ/of/4/wn7Po2JnazT8qVOwp59F5SfM/0pSMIgXBvpgAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnConfiguraciones.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAD/0lEQVRIS7VVXUyTZxTu1TQLMRHJSjLxwqgrSwbV3RkXwWicVGyFVkoRoRhdRn+AAgqzlP5DqYhz
+        UObwYnixxWVXkwvFX7xa3ZYsCtIiRROX/cE0waJcEM6+5/C16ze6ObPtSU7yvud93+d87/Oecz7ZP8QK
+        wfJfXZ2lgmEs+v4brFVuva1q63+m77tI+t6vCGPBFxaXXx6ZORt2y3M3e8SpLG9f5de2kZ8p1eATl2XY
+        m7lu4y5x+veQv5HvKbR4ftOHhuay33z7TEZWVkG+pjr65wDwYQ17yvuG4kWO/l9U7oF3RJr0AHlp94Wn
+        CZKKs5fm1P7B2YYbP0rIYfBhDXsSvtqL0Se5O7WHRDopMnMUuwut3plUkuTBoShpPQNU2uyjspYAVZ7+
+        giyXYsv2wXY1B39ds37TTpH2D8hzlV5cNXVz/bVHpGlwUbOrg8bHxwlYXFyksbExanF3UEmTl+qv/0CB
+        bx4nz0BacIm0UkDPxJUhgarGQpGJ+0ycDrGpB7TXaKaO8DR1f/eEJQWHSLccGVnZhdAVAcocZygSnWCi
+        kZsjZKyu4TFgrDbSrZFbPJ6MTQk38dG50Thp/OfjGfLXd4h0SazM2bwtnKc+FEZm4Muhuc3uYgJIU6LW
+        UalGx3Og6mCN4NNSJBLlOeQ6fmWKer59zNkFrpwt25DGXIxKFE5CQ5imPUTRiaWvN9daqNXmkAQI+k/R
+        h929ZDZZeH53dJT0nZ/SJ3eeJjmKHKE5gTtPJpR+cXloKLkA22tqpYWFBT5cVWmkDxqdkgDW2nr6qCfE
+        awAeXn/iJJ1NCYCqX7Fq1R4OgElqgGJLGx8EjFWHOUDtkTrS6wxsGPee7qea6sO8BwGKzXbJDdBShADv
+        ihKFJBJZv7xNz54/58Met5fq3m/iIAnzu4LUbneT1+vjPZFIhOtkIJ1EApY9ct3VR3Q5fIcPz8/Pk05b
+        RjZzC5P72gPk93TRAcGHNaDJ6afjw7GlR1ZXLXvkJFLTVNsapEkhz4F4PE76AwYOAGnKywzsA+4JX6+x
+        eejcXaTpYNo0TYILbWCYqxk30bzXSLEHD5nIYrJyAI+jk8fAvfEI6ersXGgnUWjC2b8sNLlC6UOZJzRE
+        +Tfd/IlKjgWoLdBDFRWVS/o7u8hgOEgNJ5ykbvRSZ3iG+r6fTWqPdpO2VaCfC21a0uwQBFdvufaQdK6P
+        ad/RZlIZraSx99Kx4Ul+VLSI1DPbTa6Z1WvXF4m0UmQr8l0lwc8l7Xp/x+DsKeHxkILIc5DC4MNaarve
+        3/XZ7GsKZbtIlx7ZCqWzwOKefpkfDvYWmNzTLyRPAHL9b7/MdMAPHsWY+OmjiP7VTz8NXhHsLfQW7i/C
+        WPS9ADLZ7xAn9/Qyo0RTAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnInformes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAD4UlEQVRIS61VfUzTVxRtwsxqVoq1UjqBttAO+qnWFicYBW2HpKOiSC1ObQZTtyArGmBmIEg7urh/
+        3HBG2OaWLWNsU+iYXwtBM4SNgNa4LM4vZJsbgUBCLNtCkIFnv/dsSevqhMlNTnJ/9913zn3n98Wa5ZCJ
+        IsLrCJhcer80eyFLXMAbaH8pB+fzNyJhAa+fqc2eCJmakMNppyAioghuLYvP5zdJpbIBhULV9zgQRkb+
+        SUj9Am1MHkusEovF35z9th0fffwpRXHJa0Egtf7B4SDUvHMIje6vg2pfHGuCShRLJyfkCXyfRUSgo7Mb
+        7d91UTR+dSIIpBZI1HquDRkaBVQS8VSts8sDnU6P+oYvkWE0gsd+soUhl1HviMCZlrMoK6+gSE5ZEQRS
+        CxQoKLQjWa/HIrUah4/U4ThzEkJORMj62zWHwdC+SMlJTNeiqzduodC+m4Jc9/7ah9ioKGjjJVTEP0BI
+        gUdZ9EZVFbRxYmSaTFNEBGajATqFHFeu3fxvgUdZVO1wYAkj4HI4gwRCIaRAt+dyyObrN39GSfEeiq4L
+        l0L2PIgZCZD6cyvlFKF6bvcNwN18EnXvH8WxpmZ6nx56D/ye//Jb/xQBId2anUTRfOI0hIL5FJ3dHpRV
+        lmGRXo7NBUaIxFFwmdKQvkQDjVL5bwGyWaOIpSBPlN+Wc0weKLAtexnFsylJeHlfJk72VOJU734s1kox
+        vr+QvsGtednkDe5hqAVBAoFEflserBNya5YOr1SYKbH9zQ1YrFfCYFiF5WoVitKSMVa5C907rfdiuJz2
+        IIFA0oflhhWJWJoko5O/6lqPnFwL3j1yFJs2b/m7wuG653S68MIyLT2JVfPMEEOvpQKBtlzw/BA6v3gZ
+        5kwTthSm0+nV2kQcYsiZD+UlhkgjEklqtu8smDQbDLhRZEOLbT2E4U8dmNHXdGF09HBh9brJzy6WYuWa
+        lLEcS+5fhJw4QUIuVw6XluydOG414bp9GyTzIty+pWnH2txdq7zuq+WITxCPvL7PMcrj8Q6QBTabvTo1
+        zThkMWeNkP9CB4NoLqeW7ppBzI+TRw3sKE8f5XLZd6uc1Xe32vLuxMXF/56atmbow08+xzzO3LF8nXJk
+        h141EhYW9rxv3/QjUhjemLtOPnrHU4CMVKl3depyb3Hp3nFLTpZXnSD8o6c1H+85jRM8DruPaX/i/q6Z
+        Be9pAae3o8E6OXFtN348ZUPDQRPO12/C+E9FuN22HXIpf3DOHJbO1/+/QrBQwPl+41rZ4JkPNuDKaRva
+        6i3Yk7fUGyMMv8WQ6319jx16AX/uW5KYCDdzqlqf5wG2sFj/AJDfq313dHo6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnPagos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAECElEQVRIS71SfUwbZRy+9trr3bXXjvaOXnv94MNii+uYA1lAGHFA4zrZ/EBYVwlzGBIg+oegiwrD
+        uLGJbhGGCRkmSLYJfkziJovJ1ESXadzYnNv8yBzR+LHAErXsQ5Cp+fm+1zJ2rmWNS3ySJ/d+/J7nuff3
+        vkQCeBHLboJYnxi0SXM6Yxl3AdORx14SFzK/34i4blaD9TGr+KBTNN+s6nIBpnirFnJXam5IXDerwfqY
+        VXzggrKNdvDezUFRlQa6j82xdpMGAtU6qOvUKtYLK0nwofpypEsqIPNOBta0qqFrdM4k9JQWwvdb4Yv9
+        S6G2ygo1bXMhuK76GTVgXXIBRQy07yevGmAuKdTBr6MlAN+WwS9HSyC/hFbs43qsSzrgyUFlQLCWgr4O
+        rxzQ35kNwXWUYn/DUJwAHUdUpIjEmOBUnZ2lSVBd4NNIsDjUkJWvAk+eCu5pVMOLhzVQWkmBz6+Tv9s+
+        mTOv2awBPh3dRYOgDDDbiAPBBjVUPz0/BZcq7jpmeUgLfr8eypdbIGcxB3ojOYGsaTmAtzFH0tMywePx
+        zkvWqAX7YvY6shwJr720UG7bjx8Xyd+hLv8VUaA+RfYqgpc0H4luGqRMZl7qGPUftJHsvZZaWnWouc59
+        EZvWV0twm0cPVUGrHNLyiDvCUOR9BG8n3vv3a4lHwUV8Lx/5GmQ4mcET+5bKhjleDl7p8MGZg4XyfHQ4
+        HzJczJ6bCkiTmKHP34kGfHmgAPo2++D2bE6eH349LxpgFom3G3pI2LgvMVuHSUAv7buY71WgFjyAWhTB
+        hrg1uEWP1jjlgMawc5KlyHtxnQe9pLesbmIkEXkH8a7OSARlVyXU+DLf6PZPY9PZS+7fmj1ttVCfoX1V
+        tCx56FLNxjaXxO9G4wAihcigkIFb3Ox4aYF5It3BnEfzfryOmDxMBqbKabP80Ptc/dSRvVugpa5iMivN
+        fs4t8R8yFBUysIadNM3uRKXOqCI+DKlm0wssS69HY3N0ifBKouV449pAZPL4AGrBmwqOfdADbU2VUwIv
+        RHIWLZkhSSoc010PdPz255vXXtnR9vB0/qLMcbddOGnlTefPHOyWzUaHt8Lqsjvgp0O9ipC9PS1/Lyu+
+        65JotY0jmwVRtziwpabserm97s/LJ3fLwsixV6FieS4MdDbBgysKILyqGM6+v0Nhjhkozv3tofB6MJkW
+        nIhZJYQJneJZl43/uijXO963qX7m9Mh22NIcglMj2xSmU6f2QOcT4culBf4JyS5Orgyu/kvP6JtjPklB
+        NBjYJnSxR/1Zrp87Hg9dxP2e+WoQulvXTac7Us8JFuNjqC6A/jzCoztAY0lW/gdw+KXgF+MQLWOChduA
+        1nTRLRk+kiTXxMb/JwjiHxojmGDGENYdAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnPrestamos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAD20lEQVRIS7WUbUxbVRjHGwPSl3N7z+0rvbdv9/ZlAo4hxQ3qJkwGRlM3tKxuDKTIi5PCJETjNuNM
+        VrcxTRb9MLMlIy5xITFzE9Zm7AM6UaPxJbrMfZnJ4jZRAxVoR5YN3x7vKbcrFIxB4Z/8kifnPOf/v8/N
+        yZHN0tpcWnluKcEoe4fknVTQX8rDvm0lS8ILmwqBhEjeSS37BDJWrwy5eSaawsniM26dWEsIHD7jtOFI
+        CtamvQPHMQMuLY6kYNXosGSbFm+mB4eO18L5dzbDhYF6KLBrE9+FtsFwsx8+bHoCHvba41+8txU+7nsS
+        ep5fB007q+D1k0/DGwOtULbaESc9pJecERj6umSbFgn46lQdPFWTD8MnAuBxGSY/aa6FxqI8+ObZLVBb
+        5Ro/Gt4A3U0e6N1fDV2vbYLHW8qgc/9jUFmeN056SC8549LgHyTbtBYK+Kx1M7SV3Atfb1+CALtZfa69
+        ofhWc6DoRqhhdQIj+W2zTpewajU3Pwgu7hfZMDUiWupnnEVlZWV59Ybc0Wqf/69Ha7YAwV/XDMHt3YCU
+        8lvr89lYngUnXHZTYq2nYMKkUd18sJCNpShfyY5V5JtiKe536McYlDMg2ctkiFJ/WtfUDq2dO+8QqG8D
+        s5X/U0PJb3jvMYw4WXryrb1dcPFsL+gxSq79Ex5B90tGAH0+M4CAEDUhbrtFVrl589jol+8nA1iDblhc
+        E0SKRDYsQIXInF/0kMXm+HW2eUPLc6BC1PdSS7bJqL166KUQ7OlsBLs5dxBjXONwOMd8vo0jmTAM86N0
+        Li2FSnVgVfGaeCrAyjtjYvB6aVumNVAHya0JtK8DI0e/a7FY+k73R+Dn0fF58Lww/xYRIUr5uZEzxAmI
+        RkPSMpHawNLXTl3aDR2v+qaVKKddXPMpFYrbxYUFE5loMD06cyytu0QeQIz8Wt2LXiCosJxctTbGSB0w
+        cPhqT1/jb/2XXwarW0/GV9lY44mzvT0QvxCdh2Bl50wgaI3UpUp/0eSaSvdUQSn3u8gfpVUrpjr2+WDv
+        2/Vw8uIuIObeSndcKc++zmlUUUpx92We1Sd85cWxTJAiZ0q8RSFiLteb1FeODnVA9MorSZMV93FxAql3
+        HQ5Ay+5q6Az7plkTPRXwCtPhrR74N7o3riTP9aBMjRVdbXsemQ4frwcCCSFPACFV07TiW1anipCvXgzJ
+        CYwW3H/odAv4W71zTGfX4pRBMup/Uq6FGXwz8gyUVLiWJ0BrRGHyi7oOzjVdsgBRcp2JOkJhxU/LFZBS
+        kDy/xz7akXyGZ9dkb6bl/6mME3TRhSB7My2LlUz2N6tpvmPl1nGpAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnLibros.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAEtUlEQVRIS82Ve0xTZxjGGUUsLeuFUjht6Y1yKdJyEQpSLoJQbjJAZAhMpHEUwgAzFglVvGRDwzKT
+        CcTMTafZcJu7BN0fLuouUcYiYU5xzsnmUNzspvtjiBZlVeDZOacXCkq2ZFmyJ/n9cb73/Z6nJ+/3nXr8
+        nyUkpKz6MA1/iM1lZjnWHi8Bk9mm4vr9HiUItDhJ4IrGQlm8rx0tTqlFEt9OqYxzSZ8ms7TvWvFwR08s
+        wqP4/Y7646Xg8DoHS2uBhhddTKRuQDRbaCHLfCcBgb4fv9xlwMVrDbj0cyPNyctFiIjm3aZ8FtRCARIW
+        68+SLJbFwa96taetZUvKBGU8NFKPA4eLYTTFgiDYM6SNxu72GKkIYbdOrZjJiouAk8y4YKRrxJO2b+Wg
+        uSDDfpMnJEGc8fwCsiczAi+1leLc6R04figfsVqi22H3qBQyYWdvTzN+OrfbxZUzjdAvJSZ/+EQCmmNi
+        dJR7gsHwfHjj+z2488sBHHmnGeurU5GaKsMSreA3h92jUvH53cWRkahNTHTxbEwMJFzfadPaBNjRIS1R
+        DG9vrwFdvGI6J1eNre0ZONG/Dqd/XINio+KOw+5RLTQDnYiY+vTIJtD0mtFsigLZbi4sUd+i5nDh6nP0
+        oM+P1mJ/37KZYDVfa3ecJ2fANl06rlU97woI43JsO5tFsENgtd6HClilUPGuUsYrspX47noj9h0qxN4T
+        eqij+GfsjvPkDNgYm4zhyiZsiFpGB2RIAieoAd8elLmGTLavCpJzPzp2ai2qTTE4erICSSlS8rgWk/eB
+        N07Wn6BN3TU/oEARNiegPJ+N8UEp3mukA7IZDMbKFzYnW/e/W4Rmsx7PGKPw/sliFFRJH5L1aNrUXX8X
+        8HQOG2MDUth6GFQAg4QVHUvcoO7C8kwF9r79FFq2JKPtDQ1CI7mv0abu+qcBB+voNyik9sjk3LNnh+tg
+        yFOh75v1yDAocXQoF6EaHnX752qhgMpQ5bh7gHMG1B6BgN26582C6W0707H79TyYt6ei70o5EjIC7pNl
+        6tMyq/kBnxdV0wE3jSUjCwWQCllZFHbrs4FqlFZE0sd1aLQONVtDZngC5jpHj13OgC+KjBg3bXIdU0OQ
+        yEoF9HYF4P752VNk30XuU/FGKOOvLtTQARdHG9DyqhZhGr+5X2EqgPrVYzVmF5akOqSIAu7d6peC5ssg
+        dK2bGyCVcw6/9WEJOjpzkJ6zhByw0ham009yhcRdsjx7XP3IAEIsv6tUqcdDQiKsoSFL7gUr1NMcH9aM
+        NlYFJ4IA4ZwALy+vXJ7Q35qQX/agsGkbysyvIK9+M+Ra3RRZjrN3kWLz/DqzqjeQDbtc5JhaoZApp5zP
+        qzd2QK03zAkgxfQTSy3Fze3IJ43Tq5qgzSiAIEj5wNNzUZ2jx0Ms4PqfUidlIS6vjGZpbiliDKsg9Be5
+        1mKyV0MWGUcFbCeh/iJpWE/yb6riU2b4RNB9hteiSS/vxcfJdZOjLvYgOIuv16cqx6qSIq3uVCRqJirT
+        IqxVK8LtZIZbjVnBEw1pij/cqZ/37KQmUWyT833GPMRc5j4Jl3mZojU7dNeaePFB5/O/YDjE38cSEcj+
+        gHyL/1IeHn8BM83kgFxqvrcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnUsuarios.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAKYAAACmAd19/zgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAFUklEQVRIS7WUe0xTVxzHK7Rc2t62tJRe6IOWPrC0FCpQeYhWeYMgoogg+ABhYpTFqQjGDUQ2NueS
+        SdCRzWxTMQtjc8uyZY7pkjm3GeNjWXRmGohzzCdu8Y2K9LtzGiCwdcn+2E7yyf3d7+/3+55z77nn8gD8
+        r/gUfUHGFIKcEOAr/0/4FCdChoYTB7bVu2P2RIXIrlmUsnv6IPauViruIjmZr56J+BTHkAgElUaF5Oom
+        d6zntbxEjLEjdzqWT7N4jArpA04SWO2rdwyfIoWM0PAgdmCi8V9pSZ8Gg5x9SGoZXx4UnyKFjIpyp/mJ
+        L+Pm9Dhsz5mOtqwEZJjUI6Q2frTHn8Cf5DOaEKg5YYfVIO2vyNEPpDiCLyhlTH9tYtS4aWtmAtYm21Ac
+        Y4SRUyDLGo6Xs11Y6jSDFQr6Y6cG/Trbpbqa4eJuJ9qDvyKe6lFv3pQgieBox5b42zhfBpxajMe9C1Cd
+        Y8T6VAfWz3QgVs9hXqIdGxfOQUfdIlx+bxty4yKxboYdVfGRWLsoEt5eyrkynNuXjWijdIh4a3n+/ry8
+        zTW2e2MFFw/l46cPc1GYpINNrcDsaBP69jdj8OArkzj/ViOiODlMShmq8i3jE/T1FuDu1wvRtjIarMhv
+        FU8uDeg98X6WN/lmczJK5kTD7TSgID4CNWlxOLm7HpsWZyA/KRpHXq3zQuP64jR8saEUlW4n8l0RWF1i
+        xaJMEwpmRGLlPAuOd6TBpGXbecFy5tLjHxfj+665uPHxVu/qrnS/iKSpYShJsuNMZ8PfVk+52d2Kk82V
+        KCCvKtmqw7ft63Gtp82be3aeC4WpGmiVks94drPs8tOzpShItUwyqEiPgp5j8eX2tbja8xIuHWgZz/V3
+        bcWVrmYcrl8Cvr8fPtpaM6n3+t7nEW9Uj9g0yss8R6Ss75v9mSPbKvMmFbUucWNNoQlNy3IfXdzXBHeM
+        GTueKcLrqxcilezLhd0b0FI0yyPg+z+d2Ee5SSawakKGDEpZD8+oY3tzUtV/HNv53KSid6oLPGlxKg8b
+        GHDnwt4m7+N3b6lEV+My7ys83VoNm0Z1nRUyb3RvqXo0sfdG50YYVPLj3s9UKubn8Pl+Qyl24wBdKS04
+        sq3aowuWPQwQ+A2TT22WMUz5c/ua4mG6H2d2bcDOpTmeaB03SHJmgs6kVv5yeEfdCO09vXMdPq1fcoPo
+        /hMPmoqQFCwR3XKZtVBKRAPk3kiIGTuIKhl7dFaUHm6CWi75jmjjf1UydDJR4ADtlQmZB+R+xnhutIDT
+        CETHFIxwOMUcCY4RD+v54s+JLiUoxSLJu0KGuVdODl0ZOXxCJvC+WCTdR3O0hq/iPglUBD92OGPBBMmf
+        BugMJ6jnqDfPZGNkfS5hsGcpZ0VD4wtoCo2FnQmChZEOSljZTU2owZMQk4KWuhgvNNaE6iGXBg8JVaGX
+        xJaoEdWaejRsbgI3vxSB9liIHdN+p948uV/A9h/MeU9qFRaksaEIkSuQzarRoLTDqgxH+fzV0IYakJE6
+        HyuKrF5oTLWi7OUIU0d4ImrXgU1NQ5AyBOKkmeCKK6B7+yAEnLqdpxeIz54x5+GUKQ9xQgV9JsyVaLBC
+        FYW56aWordgMi8GOlIRMxEzVeKEx1arL6jEnOR8ReQugdGd4eyU2BxJ7DkGz5wMILVG/8XQCUZVRwO4a
+        w8RIO+mV4QfcqS7d6J2gMKsCai4c2rAwLzSm2qryRpTk14BhhA+FWv0uUbixk14p4mjnAdZqq/Nusi9Y
+        kbTfaUu8NQYxvU9XSKHxmO6wuoaDpIpBXx4UnyKFDC3B+S/R+PKg+BT/O8D7E2zsl5KxKfzoAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="btnCerrarSesion.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAC2UlEQVRIS61VyWsTURyemSS2dSSL1yipIhhj7IrSUlpaaCUxaaEnSevRqujBk21d/gBxrYpHFT14
+        cKvgcpTaHMWDOyh48WS9CS7NMs/ve/OmTbQTU5gPPvjNb3+/t4y2Coz5dX3BbxhfIedslXdYb+h6IRuN
+        ikw0akFehC5im7zBTlC8SKUkKSudZ9gFipfptCRlpfMMnhZoBI+Ap8ANVAC1CmwE6XsYbKCiFgI4Kc+x
+        iVaTz1fiqYEuDLoViMDnG30Zw1joAqArrvh0vfxscFC8yWScRBnQrUCWMn0Zw1h8XwJXRKuuadaFzk4h
+        xsfFZCIh0FUJ+s2gW4EtiClNwZcx5zo6BHNAvwOsBqo/3GSaxUIuJx7199ORSY7ZVtcCxCR9nwwMCMbG
+        kAO57ivbEkxenrPogJ1sCwaLap4OahXQ4DufCIWKjD3T3s6V/4Z6rW21kQLF+2xWvFqe/R4aFOKguN3T
+        I0kZ3EqDAvdJvEbsW+SgDO6mwcEEZ8clXuvqopFzbJIWG0ZA1/McBYmO56CDuAR2a11HLHMwF773S4vC
+        9Dq/Xy6RY8IMfyh9JXjGx0A+dGuoqARifjojNpELqinbYuOAswJ2gW92wAtXL+QKbnR3i8XlFUxIi4Lc
+        gw/Dw5V7kKahTsg94H1457IH8hTxBLicopqAb367OkWnXU5R1T14jHsAFVk1Rxcc58Y/xT3geNQ9eKBs
+        VWjj7M6rjTqRTDpFZsAgHf4CdZdBcRK+zgFR82+hwz8wNO0qqpfnhoZkwEU8Gw2GUcYIvsN8E5xWvEUd
+        bTPqaannLSL4mub5Os729cnAL6OjcjXJUKjAo0y2hMNF6mijz73eXtFov77zzGGncoeJTma51Fxzs/Vp
+        ZEQmWYkfYdsbi1ncAzV3007xfyBGO4SOFhjcFokUj8bjcsYk5VasAj681fxnHFQxqwY72ofIu5j3Z3T5
+        i6SM/bpDm/Jxgab9AfGTehkCJpNiAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnGeneral.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAFMUlEQVRIS52Ue0xTVxzH0UwzQqmApbTA2koLrW3ti75sa1vbUlpueYlAqUVABSsq0CHCNkGizhDm
+        XPQPUZzOhcT5nFNn4pYtbMnckPnafMVtOhHwERCwotgK/nbv5WqGskz8JN/ce875ne/33HvOvUETZfDn
+        FBtA0CRvJwQHAUwiut+IKSQy2UmhUpvp9JgWCoWyeerUUB4xFuS97D/kvRIoJZoTg0Qi8ZlM1jk7khZY
+        kF8ImJyufJDKEu+Eh4fbsRrvVf+s6uswDZ8wQaag5mdd7gLc+GXRaNHfozUho6VvAJkclo+kpo+MF4D1
+        ZWZlQxSNto8onzgUCrUp2Y4MpZp13XKpqENvMD60JCX7ZTJZdy5i6VIqVbfjOJw2onzioJu5l5eQcPfJ
+        +ePw+Nwx+P3IdvipZfNIf9th8F/4Gsw6VSeDwbxElE+Y0Ayz7o+lOSldmNl4KndndDRWFvcJuZwcqK9/
+        a7i41knMfS3EX26pfVxVNL8DMyvJtoOv/QhuvLbUDddO7IJVRfNvYk+mlQo+xSbAsppwfOZrMtmkFB8z
+        qyV4wHjKcxhv5dgMF6IpFC5aT0I1A9X/f3DQmk163OYohzOJUxJY0WtvfLMHN9zyngc2VRXDleM78bZN
+        m4gdUw6qEJ2CdaC+wuybFvK2BW2zUWGB49N/PiNssC21BlqNb6NNckFG0sXnG9176iBu/sVHNX0xVKqn
+        vEjbVZynuHq4yd13p/19qCsz/b1xlbVr7mx266jba8Bm0BNNKsm1lobV/Se2rx/Ktem75QJOBTpEKkHN
+        T+xy9y/KZHcXprMGFmdxO+6eWQNqKePo6OxxaLiQLCBuceixsTbDbMXl0/u2wHe7G0bK8jN7OAncBr1q
+        xqGD21z3l+dxOmsWK+GzDRWwv1EFVUvkt8oKNFfmKFh1hMVYNly0voNepkaSg1eyqNNuqIQc/67P9/q2
+        1r1777cjOwJlZRXdcolksK7c8uQ2+lpqiri9ZsMsEAriYUWBHLyFwuunvyqFjGTB6VHHl4gMDSkUM6mX
+        FpmEwxYRE2pz9eCtqvYZFaoeDTvh3o+/nHtm08oCAgblWbXH8EDMj32g9BwFTUUrCA3ZI1I5r4ef7noY
+        GsP6gS5SfkjYvmCSNC5qAEmMg6o0OWABzcsR0Go0/Yh2rh8RywOp87LvV2ZqQJUQDdjJud3+AThzknqs
+        jpQ+kULSm7n7JPDdFWBa3wwcS/orv5LpeXrB02KrBBbq+XjATjTAmWZ/sGbBEthozYISz/LeJo8dLGIm
+        6OQsn4RHG17qUg6eOuwB4fxCH2auO/AXsJ0rAflkr48yU9RIeOPEl1ilz5pLU1BzFji1PDAIGLDQpnla
+        mZoDexAXpNutA04dH2ySGbDQwIdyhxIcmvhhh4nbGRYbd8pY3wTs3JUgWrQa4gzI2eDwcAbhjaOuTFfj
+        q04Ss4jXxIJ1C4yQLZ09chLJhySVOJCl5kF5ihRc6AKq52nwejmb1hotVm1iW9LaU7fuf8g2p52Nlqi/
+        JXxHYUwn5691zhkTYJrFgB3oE3k0Zv9RxA1lDhUgcg54HbIxARpe7K+EzWSqQLY5OCICO41j4cZQ1jUW
+        mMcEFBkFsMQigWXmpKE6U1rg4yLLi7F/B+j5jKvYDy9QUqsi7F5FyKC0bFtqGxOAyYjuwzKbfmTxnLlD
+        mWourLBJXgkwiVg3CZv/RsCMXJMiZz9yyDmPOPSwPiU76k9MM2MiusQsmp8RGf6EHRU28LxfEBNxC135
+        EFaviKeP/2HhBAX9A0eZllRDUkvrAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnMiPerfil.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADFUlEQVRIS62VX0hTURzHd3evc7vDCQbuz8P+lFrq7KGYmSiYzqbTWUiQhc40ffChgkok+wdZ0oP4
+        kFQsCiQHqYXCxMSHKCQCwT+R/TH/vPXSoxH0726/fudsd7l5l671hQ/38DvnfL+7555zJtuCyhiGmZTL
+        5V9Zll1DZrDWishpb4K6ioBWpxPq6t1w3H0Ccqx5flLDwH46IgG5EaisroFX8wswv7gSpu3UGSB9SBsZ
+        +C/i8Bd+zs3bLcy8+xhhTiCBhUXFAVw6Acdqg1Pikw2B7p7eDeYinv4B8S3sZEK8qkDg4dATSXPCoxGf
+        GHCITIhXZBIMjo5JmhMSDehDYPzZC0lzwujTSTGgl0yIVz6zZbtfyng9HZeufMNzcTI0Jy514g4JeB+P
+        SBr/YdkbGh+3UnGbfiGHS9p4BWZx+zpdrgYce5ORM6vIJ2x7EBeiQDaVLyVFI0w8n4ow7vPcB4ezCng1
+        HzzRSXJBl68P6PbpA9imNRkjW8PnIOJEYmonvsVaRmaWsD6A4zhQparAWG4O2C4WQOWQC6pHD1NIm9SM
+        5SZ/Ep/0Az1+Ba1i65ZSqYwIwBpkHd0VNo0FGUPGUpdYwg89nW21bjmg9G45qPVq2HPe9tcADVKP5hP4
+        hMvXboTNowNKPQfBOVxD2/YHFcBreVBokmlQdACD1KKpD/mJbUjXaoWzHZ0w92E5IkChUEBGbRY1VaYp
+        IS17G5Tdc0CKUQMcz0FxTwnt21GbCej1nbrjxxwQTRuamukdFG0sYrSYQV9ooCZ72/OBYRmykxAW9ncV
+        0TpBV2AAhmOWiL+DmLubW+jeljJdz5G6Y8ApOXB4q8Ih5E1sFwrC5o4BJ7AKNoC+t0nAHRXPC9Nv3ksa
+        RjPsGyf/ZmCqsIQNozHaTeQskDNhxeXhFvUGA5w+174p5AYlIY0trfQD5jRZN5hnN+aKH7cboeu/Gips
+        Cv4fe+eWVu1Ts68dWoP+JamZKy24k1z0kJkcZjouWZXswyeLJCQOuY5LEeC1aj+fjlcHtrHWFer7bzqA
+        F91bZAHbJcGSKJnsN0i12/Tj0tqSAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="panelFormularios.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAQEBAQEBAQEBAQGBgUGBggHBwcHCAwJCQkJCQwTDA4MDA4M
@@ -333,6 +552,6 @@
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>30</value>
+    <value>25</value>
   </metadata>
 </root>
